# Synthoxide

./: .gitignore  Makefile  README.md  shell.nix
godot/: export_presets.cfg  project.godot
godot/assets/: Key.obj.import  Keyboard.glb  Keyboard.glb.import  Keyboard.mtl  Keyboard.obj.import  MinorKey.obj.import
godot/native/: game.gdnlib
godot/scenes/: Game.tscn  Key.tscn  Keyboard.tscn  MinorKey.tscn
godot/scripts/: Game.gd  Key.gd  Keyboard.gd
rust/: Cargo.toml
rust/src/: game.rs
